--- a/metadata.yaml
+++ b/metadata.yaml
@@ -28,6 +28,7 @@ subjects:
 - !lcsh 'Folk literature, Hungarian'
 - !lcsh 'Tales -- Hungary'
 - !lcc 'PH'
+- GITenberg
 tableOfContents: Ki hogy vet, úgy arat -- Nemtudomka -- Leányszín Bálint és Gyöngyszín
   Ilona -- Csonka és sánta pajtás -- A buzogányos gyermek -- A szerencsés óra -- Hamupepejke
   -- Az aranymadár -- Esztendőre ilyenkor -- A hűséges princeszné -- A szalmakirály
